# fdict

./: .coveragerc  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  pyproject.toml  setup.py  tox.ini  travis.yml
.github/workflows/: ci-build.yml  ci-cd.yml  codeql.yml
fdict/: __init__.py  _version.py  fdict.py
fdict/tests/: tests_fdict.py
perf/: benchmarks.py
src/fdict/: __init__.py  fdict.py
tests/: test_fdict.py
